--- a/doc/report/1-назначение.tex
+++ b/doc/report/1-назначение.tex
@@ -9,19 +9,19 @@
 
 
 Основными требованиями к языку при разработке были поставлены
-\begin{itemize}
+\begin{d_itemize}
 \item 
     Язык должен быть минимально достаточным для удобной разработки компиляторов. Требование это во многом субъективно, так как компиляторы можно писать существенно по разному.
 \item 
     Язык должен быть русскоязычным и с синтаксисом минимизирующим переключение на латиницу в процессе разработки программ.
-\end{itemize}
+\end{d_itemize}
 
 Название языка происходит от слова "тривиальный", что означает, что при разработке языка практически везде использовались решения, проверенные в других современных языках программирования, в первую очередь "донорами" являются Go, Swift, Kotlin и Oberon.
 
 Несмотря на узкую направленность на разработку компиляторов, \thelang{} является языком программирования общего назначения, пригодным для решения широкого круга задач.
 
 Язык (и экосистема) обладает существенными предпосылками для использование его в качестве учебного языка для обучения студентов разработке компиляторов, библиотек, средств разработки, алгоритмов оптимизации и так далее, в первую очередь это:
-\begin{itemize}
+\begin{d_itemize}
 \item 
     Простота языка
 \item 
@@ -30,5 +30,5 @@
     Простота компилятора
 \item 
     Открытая лицензия.
-\end{itemize}
+\end{d_itemize}
 
