--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -5,30 +5,31 @@
 Каждая лексема состоит из последовательности Unicode символов (unicode code point) в кодировке UTF-8.
 
 Пробелы (U+0020), символы табуляции (U+0009) и символы завершения строки (U+000D, U+000A) разделяют лексемы, и, игнорируются, кроме следующих случаев:
-\begin{itemize}
+\begin{d_itemize}
 \item
 Символы завершения строк могут использоваться как разделители синтаксических конструкций (\See{lex:separators}).
 \item
   Пробелы являются значащими символами в идентификаторах, состоящих из нескольких слов (\See{lex:idents}). 
 \item
   Пробелы являются значащими в строковых и символьных литералах (\See{lex:idents}). 
-\end{itemize}
+\end{d_itemize}
 
 Несколько таких разделителей трактуются, как один.
 
+\bigskip
 Исходный текст может содержать \emph{комментарии}.
 
 \hypertarget{comments}{%
 \subsection{Комментарии}\label{lex:comments}}
 
 Есть две формы комментариев:
-\begin{itemize}
+\begin{d_itemize}
 \item
 Строчный комментарий начинаeтся с последовательности символов '//' и заканчиваeтся в конце строки.
 \item
 Блочный комментарий начинается с последовательности символов '/*' и заканчивается последовательностью символов '*/'. 
 Блочные комментарии могут быть вложенные.
-\end{itemize}
+\end{d_itemize}
 
 \begin{Grammar}
 Комментарий
