--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -19,7 +19,7 @@
 Область действия, которая содержит в себе все исходные тексты на языке \thelang{} называется \emph{Универсум}.
 
 Области видимости:
-\begin{itemize}
+\begin{d_itemize}
 \item
 Областью действия предопределенного идентификатора является Универсум
 \item
@@ -30,7 +30,7 @@
 Областью действия идентификатора, обозначающего параметр функции, является тело функции (\See{decls:functions}).
 \item
 Областью действия идентификатора, описанного в теле функции (\See{decls:functions}) или теле входа (\See{mods:entry}), является часть \emph{блока} (\See{stmt:blocks}), в котором описан идентификатор, от точки завершения описания и до завершения этого блока. 
-\end{itemize}
+\end{d_itemize}
 
 В описании сразу за идентификатором может следовать признак экспорта '*', указывающий, что идентификатор \emph{экспортирован} и может использоваться в другом модуле, \emph{импортирующем} данный (\See{mods:import}). 
 
@@ -90,7 +90,7 @@
 \subsection{Указание типа}\label{decls:type-ref}}
 
 \thelang{} является языком со статической типизацией, что означает, что тип любого объекта языка явно или неявно указывается во время описания объекта. 
-Неявное указание типа может быть использовано в описании констант (\See{decls:constants}), переменных (\See{decls:constants}) и полей класса ().
+Неявное указание типа может быть использовано в описании констант (\See{decls:constants}), переменных (\See{decls:constants}) и полей класса (\See{decls:class-types}).
 
 Для явного указании типа используется имя типа, перед которым может стоять ключевое слово \keyword{мб} (\emph{может быть}). 
 
@@ -100,7 +100,7 @@
 \end{Grammar} 
 
 Множество значений объекта с типом \keyword{мб} T состоит из значения, обозначенного предопределенным идентификатором  \keyword{пусто} и значений типа Т. 
-Тип такого объекта называется \emph{может быть Т} (\See{decls:mb-types}). В англоязычных языках программирования используется термин \emph{nullable type}.
+Тип такого объекта называется \emph{может быть Т} (\See{decls:mb-types}). 
 
 
 \hypertarget{constants}{%
@@ -280,12 +280,30 @@
 \hypertarget{inheritance}{%
 \subsubsection{Наследование}\label{decls:inheritance}}
 
+Наследование позволяет определить новый класс (\emph{расширенный класс}) на основе существующего (\emph{базового}) класса. 
+Расширенный класс наследует поля и методы базового класса и может добавлять новые поля и методы.
 
-
+Обращение к полям и методам базового класса ничем не отличается от обращения к полям и методам самого класса. 
+Методы базового класса можно переопределять, сохраняя те же самые типы параметра и тип результата.
 
 \hypertarget{mb-types}{%
 \subsection{Может быть тип}\label{decls:mb-types}}
 
+Как правило, современные языки программирования ограничивают работу со объектами ссылочных (\emph{reference}) типов для того, 
+чтобы сделать явными все места в программе, в которых может возникнуть ошибка использования нулевой ссылки (\emph{null pointer exception}). 
+Так как русская терминология в этой области не устоялась, приходится обращаться к англоязычным терминам.
+
+Язык \thelang{} следует уже выработанному в современных языках программированию подходу (но не синтаксису):
+\begin{d_itemize}
+\item
+    Если в указании типа объекта использована нотация \emph{\keyword{мб} Т}, где \emph{Т} - это некоторый ссылочный тип,  
+    то значением этого объекта, кроме значений типа \emph{Т}, может быть специальное значение 'пусто'. Тип такого объекта называется \emph{может быть Т}.
+\item
+    Иначе, если ключевое слово \keyword{мб} отсутствует в указании типа объекта, значением этого объекта может быть только значений типа \emph{Т}.
+\end{d_itemize}
+
+
+Ссылочными типами являются типы Строка, типы вектора и типы класса.
 
 
 \hypertarget{functions}{%
