--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -302,8 +302,26 @@
     Иначе, если ключевое слово \keyword{мб} отсутствует в указании типа объекта, значением этого объекта может быть только значений типа \emph{Т}.
 \end{d_itemize}
 
+Ссылочными типами являются Строка, типы вектора и типы класса, к остальным типам \keyword{мб} не может применятся.
 
-Ссылочными типами являются типы Строка, типы вектора и типы класса.
+Для объекта типа \emph{мб Т} определены следующие действия:
+\begin{d_itemize}
+\item
+    Присваивание объекту значения 'пусто' или значения типа Т
+\item
+    Сравнение на равно/не равно с 'пусто'  или с другим объектом типа \emph{мб Т}
+\item
+    Операция \verb+'^'+ перехода от значения типа \emph{мб Т} к значению типа \emph{Т}
+\end{d_itemize}
+Подробнее в  \See{expr:mb-ops}, \See{compat:assign}.
+
+\bigskip
+Пример указания типа и использования объекта:
+\begin{Trivil}[vspace=2pt]
+пусть кличка: мб Строка := пусто
+...
+если кличка # пусто { вывод.ф("%v\n", кличка^}
+\end{Trivil}
 
 
 \hypertarget{functions}{%
