--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -21,5 +21,9 @@
 \hypertarget{operators}{%
 \subsection{Операции}\label{expr:operators}}
 
+\hypertarget{mb-ops}{%
+\subsection{Операции для объектов может быть типа}\label{expr:mb-ops}}
+
+
 \hypertarget{const-expr}{%
 \subsection{Константные выражения}\label{expr:const-expr}}
