--- a/doc/report/8-модули.tex
+++ b/doc/report/8-модули.tex
@@ -9,5 +9,5 @@
 Ошибка компиляции, если знак экспорта указан для идентификатора, описанного не на уровне модуля.
 
 \hypertarget{entry}{%
-\subsection{Вход}\label{mods:entry}}
+\subsection{Вход или инициализация модуля}\label{mods:entry}}
 
