--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -1,7 +1,8 @@
 \hypertarget{lexica}{%
 \section{Лексика}\label{lex:chapter}}
 
-Исходный текст есть последовательность лексем: идентификаторов, ключевых слов, литералов, знаков операций и знаков препинания. 
+Исходный текст есть последовательность лексем: идентификаторов (\See{lex:idents}), ключевых слов (\See{lex:keywords}), 
+знаков операций и знаков препинания (\See{lex:operators}), литералов (\See{lex:intlit}, \See{lex:floatlit}, \See{lex:strlit}, \See{lex:symlit}) и модификаторов (\See{lex:modifiers}). 
 Каждая лексема состоит из последовательности Unicode символов (unicode code point) в кодировке UTF-8.
 
 Пробелы (U+0020), символы табуляции (U+0009) и символы завершения строки (U+000D, U+000A) разделяют лексемы, и, игнорируются, кроме следующих случаев:
@@ -17,7 +18,7 @@
 Несколько таких разделителей трактуются, как один.
 
 \bigskip
-Исходный текст может содержать \emph{комментарии}.
+Исходный текст может содержать \emph{комментарии} (\See{lex:comments}).
 
 \hypertarget{comments}{%
 \subsection{Комментарии}\label{lex:comments}}
@@ -140,7 +141,7 @@
 Строковый литерал - это последовательность символов, заключенные в двойные кавычки. Строковый литерал может содержать символы, закодированные с помощью escape-последовательности, которая начинается с символа \verb+'\'+.
 
 \begin{Grammar}
-Строковый литерал
+Строковый-литерал
     : '"'
     (~('"' | '\\' | '\n' | '\r' | '\t') | Escape)* 
     '"' 
@@ -160,8 +161,23 @@ Escape
 Он записывается как один или несколько символов, заключенных в одинарные кавычки. Символьный литерал может быть закодирован с помощью escape-последовательности, которая начинается с символа \verb+'\'+.
 
 \begin{Grammar}
-Символьный литерал
+Символьный-литерал
     : "'" 
     ~("'" | '\\' | '\n' | '\r' | '\t') | escape_value)
     "'"
 \end{Grammar}  
+
+\hypertarget{modifiers}{%
+\subsection{Модификаторы}\label{lex:modifiers}}
+
+Модификаторы использутся в исходном тексте, чтобы внести изменение в в семантику и/или синтаксис конструкции языка, см., например, \See{decls:extern-fn}.
+
+\begin{Grammar}
+Модификатор: '@' Буква+ Cписок-атрибутов?
+Cписок-атрибутов: '(' (Атрибут (',' Атрибут)*)? ')'
+Атрибут: Строковый-литерал ': 'Строковый-литерал
+\end{Grammar}  
+
+\begin{Trivil}
+@внеш("имя":"print_string")
+\end{Trivil}
