описание функции - начало

--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -246,7 +246,7 @@
 Областью действия идентификаторов полей является само описание класса, но они могут быть доступны в операции доступа к полям и методам (\See{expr:selector}).
 
 \begin{Grammar}
-Тип-класса:  'класс' Базовый-класс? '{' список-полей? '}'
+Тип-класса:  'класс' Базовый-класс? '{' Список-полей? '}'
 Базовый-класс: '(' Указ-типа ')'
 Список-полей: Поле (Разделитель Поле)*
 Поле: Идент-оп (':' Указ-типа)? Инициализация
@@ -327,5 +327,29 @@
 \hypertarget{functions}{%
 \subsection{Описание функций}\label{decls:functions}}
 
+Описание функции состоит из идентификатора, сигнатуры  и тела функции. 
+Сигнатура определяет формальные параметры и тип результата (если таковой имеется). 
+Особым видом функции является метод, см. \See{decls:methods}.
+
+\begin{Grammar}
+Описание-функции: 'фн' Идент-оп Сигнатура Тело
+Сигнатура: '(' Список-параметров? ')' Тип-результата?
+Список-параметров: Параметр (',' Параметр)* ','?
+Параметр: Идентификатор ':' '...'? ('*' | Указ-типа)  
+Тело: (Блок | Модификатор)?
+\end{Grammar} 
+
+\hypertarget{extern-fn}{%
+\subsubsection{Внешние функции}\label{decls:extern-fn}}
+
+
 \hypertarget{methods}{%
 \subsection{Описание методов}\label{decls:methods}}
+
+\begin{Grammar}
+func_decl
+	: 'фн' receiver? name func_type (statement_seq | modifier)?
+receiver
+	: '(' ident ':' type_ref ')'
+	;
+\end{Grammar} 
