--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -339,9 +339,50 @@
 Тело: (Блок | Модификатор)?
 \end{Grammar} 
 
+Вместо тела функции может стоять модификтор (\See{lex:modifiers}) \verb|@внеш|, см. \See{decls:extern-fn}.
+
+Если у функции задан тип результата, тело функции должно завершаться операторами \keyword{вернуть} (\See{stmt:return}) или \keyword{авария} (\See{stmt:crash}).
+
+\begin{Trivil}
+фн Факториал(ц: Цел64): Цел64 {
+    если ц <= 1 { вернуть 1 }
+    вернуть ц * Факториал(ц - 1)
+}
+\end{Trivil}
+
+\hypertarget{params}{%
+\subsubsection{Параметры}\label{decls:params}}
+
+Формальные параметры - это идентификаторы, которые обозначают \emph{аргументы} (фактические параметры), указанные при вызове функции (\See{expr:call}).
+
+\begin{Grammar}
+Параметр: Идентификатор ':' '...'? ('*' | Указ-типа)  
+\end{Grammar} 
+
+Последний параметр функции может иметь тип с префиксом \verb|...| - это \emph{вариативный параметр}. Функция с таким параметром может быть вызвана с нулем или более аргументов для этого параметра.
+
+Если вместо типа параметра указан символ \verb|'*'|, то параметр называется полиморфным.
+Аргумент, соотвествующий этому параметру, может быть выражением любого типа. 
+Для вариативного полиморфного параметра каждый аргумент может быть выражением любого типа. 
+Для работы с полиморфным параметром определены специальные стандартные функции (\See{stdfuncs:stdpoly}).
+
+\begin{Trivil}
+фн печать по формату(формат: Строка, аргументы: ...*) {
+...
+}
+\end{Trivil}
+
 \hypertarget{extern-fn}{%
 \subsubsection{Внешние функции}\label{decls:extern-fn}}
 
+Функция, в которой вместо тела стоит модификатор \verb|@внеш|, является \emph{внешней функцией}, то есть реализованной каким-то внешним способом.
+Атрибут "имя" модификатора задает внешнее имя функции.
+
+\begin{Trivil}
+фн строка(с: Строка) @внеш("имя":"print_string")
+\end{Trivil}
+
+Если атрибут "имя" не задан, внешнее имя совпадает с идентификатором функции.
 
 \hypertarget{methods}{%
 \subsection{Описание методов}\label{decls:methods}}
