--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -7,6 +7,10 @@
 \hypertarget{selector}{%
 \subsection{Доступ к полям и методам}\label{expr:selector}}
 
+\hypertarget{call}{%
+\subsection{Вызов функции или метода}\label{expr:call}}
+
+
 \hypertarget{indexation}{%
 \subsection{Индексация}\label{expr:indexation}}
 
