--- a/doc/report/6-операторы.tex
+++ b/doc/report/6-операторы.tex
@@ -9,3 +9,9 @@
 
 \hypertarget{inc-dec}{%
 \subsection{Инкремент и декремент}\label{stmt:inc-dec}}
+
+\hypertarget{return}{%
+\subsection{Оператор вернуть}\label{stmt:return}}
+
+\hypertarget{crash}{%
+\subsection{Оператор авария}\label{stmt:crash}}
