--- a/doc/report/7-стдфунк.tex
+++ b/doc/report/7-стдфунк.tex
@@ -4,6 +4,8 @@
 \hypertarget{stdlen}{%
 \subsection{Длина}\label{stdfuncs:stdlen}}
 
+\hypertarget{stdpoly}{%
+\subsection{Функции для полиморфных параметров}\label{stdfuncs:stdpoly}}
 
 \hypertarget{stdvector}{%
 \subsection{Встроенные методы для векторов}\label{stdfuncs:stdvector}}
