--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -240,7 +240,7 @@
 Тип класса - это структура, состоящая из полей. С типом класса могут быть связаны функции, называемые методами (\See{decls:methods}).
 
 Описание класса состоит из опционального указания базового класса и списка полей. 
-Если базовый класс указан, то класс \emph{наследует} поля и методы базового класса (\See{decls:inheritance}).
+Если базовый класс указан, то класс \emph{наследует} поля и методы базового класса (\See{decls:inheritance}). 
 
 Для каждого поля в списке задается идентификатор, тип (явно или неявно) и начальное значение.
 Областью действия идентификаторов полей является само описание класса, но они могут быть доступны в операции доступа к полям и методам (\See{expr:selector}).
@@ -280,9 +280,13 @@
 \hypertarget{inheritance}{%
 \subsubsection{Наследование}\label{decls:inheritance}}
 
-Наследование позволяет определить новый класс (\emph{расширенный класс}) на основе существующего (\emph{базового}) класса. 
-Расширенный класс наследует поля и методы базового класса и может добавлять новые поля и методы.
+Наследование позволяет определить новый (\emph{расширенный}) класс  на основе существующего (\emph{базового}) класса. 
 
+Базовый класс \emph{Б}, указанный в описании класса \emph{К}, называется \emph{прямым базовым классом}. 
+Так как \emph{Б} может быть, в свою очередь, расширением другого базового класса, для каждого класса определен список базовых классов, возможно, пустой.
+Термин \emph{базовый класс} будет использовать для обозначения любого класса из этого списка. Циклы в списке базовых классов запрещены.
+
+Расширенный класс наследует поля и методы базового класса и может добавлять новые поля и методы.
 Обращение к полям и методам базового класса ничем не отличается от обращения к полям и методам самого класса. 
 Методы базового класса можно переопределять, сохраняя те же самые типы параметра и тип результата.
 
@@ -387,7 +391,39 @@
 \hypertarget{methods}{%
 \subsection{Описание методов}\label{decls:methods}}
 
+Метод - это функция, связанная с типом классом. Для вызова метода (\See{expr:call}) должен быть указан экземпляр этого класса или расширенного класса. 
+В описание метода класс, с которым связан метод указывается с помощью \emph{Привязки}.
+
 \begin{Grammar}
 Описание-метода: 'фн' Привязка Идент-оп Сигнатура Блок
 Привязка: '(' Идентификатор ':' Указ-типа ')'
 \end{Grammar} 
+
+Привязка определяет идентификатор и тип, который должен быть типом класса. В теле функции идентификатор привязки является параметром указанного типа.
+
+\begin{Trivil}
+тип К = класс {}
+
+фн (к: К) метод() {}
+\end{Trivil}
+
+Идентификатор метода должен быть уникальным в классе среди идентификатором полей и методов. 
+
+В расширенном классе может быть определен метод с таким же идентификатором как в одном из базовых классов.
+
+\emph{переопределен}, то есть опеределен другой метод . При этом сигнатура переопределеного метода должна совпадать с сигнатуром переопределяемого метода, а именно:
+\begin{itemize}
+\item
+    Число параметров должно совпадать
+\item
+    Типы  параметров должны быть эквивалентны \See{compat:equal-types}
+\item 
+    Признаки вариативности и полиморфности должны совпадать
+\end{itemize}
+
+Пример ошибки при переопределении метода (разное число параметров):
+\begin{SampleErr}[vspace=2pt]
+тип К1 = класс (К) {}
+
+фн (к: К1) метод(с: Строка) {}
+\end{SampleErr}
