--- a/doc/report/9-совместимость.tex
+++ b/doc/report/9-совместимость.tex
@@ -1,6 +1,9 @@
 \hypertarget{compat}{%
 \section{Правила совместимости}\label{compat:chapter}}
 
+\hypertarget{equal-types}{%
+\subsection{Эквивалентность типов}\label{compat:equal-types}}
+
 \hypertarget{compat-assign}{%
 \subsection{Совместимость по присваиванию}\label{compat:assign}}
 
