--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -2,7 +2,9 @@
 \section{Описания и области действия}\label{decls:chapter}}
 
 Каждый идентификатор, встречающийся в программе, должен быть описан, если только это
-не предопределенный идентификатор (\See{decls:predefined-idents}). Идентификатор может быть описан как тип, константа, переменная, функция или как поле класса.
+не предопределенный идентификатор (\See{decls:predefined-idents}). 
+Идентификатор может быть описан как тип, константа, переменная, функция или метод, 
+а так же как параметр в сигнатуре функции или метода, и как поле в типе класса.
 
 \begin{Grammar}
 Описание
@@ -10,7 +12,11 @@
 	| Описание-констант
 	| Описание-переменных
 	| Описание-функций
+	| Описание-метода
 \end{Grammar} 
+
+\hypertarget{scopes}{%
+\subsection{Области действия}\label{decls:scopes}}
 
 Описанный идентификатор используется для ссылки на связанный объект, в тех частях программы, которые попадают в \emph{область действия} описания. 
 Идентификатор не может обозначать более одного объекта в пределах заданной области действия. 
@@ -18,23 +24,25 @@
 
 Область действия, которая содержит в себе все исходные тексты на языке \thelang{} называется \emph{Универсум}.
 
-Области видимости:
+Области действия:
 \begin{d_itemize}
 \item
 Областью действия предопределенного идентификатора является Универсум
 \item
 Областью действия идентификатора, описанного на верхнем уровне (вне какой-либо функции), является весь модуль (\See{mods:chapter}).
 \item
-Областью действия имени импортируемого модуля является файл (часть модуля), содержащего импорт (\See{mods:import}).
+Областью действия идентификатора импортируемого модуля является файл (часть модуля), содержащего импорт (\See{mods:import}).
 \item
 Областью действия идентификатора, обозначающего параметр функции, является тело функции (\See{decls:functions}).
 \item
 Областью действия идентификатора, описанного в теле функции (\See{decls:functions}) или теле входа (\See{mods:entry}), является часть \emph{блока} (\See{stmt:blocks}), в котором описан идентификатор, от точки завершения описания и до завершения этого блока. 
 \end{d_itemize}
 
-В описании сразу за идентификатором может следовать признак экспорта '*', указывающий, что идентификатор \emph{экспортирован} и может использоваться в другом модуле, \emph{импортирующем} данный (\See{mods:import}). 
+В описании верхнего уровня за идентификатором может следовать признак экспорта \verb|'*'|, указывающий, что идентификатор \emph{экспортирован} и может использоваться в другом модуле, \emph{импортирующем} данный (\See{mods:import}). 
 
-\begin{Grammar}
+\bigskip
+Правило для опционально экспортированного идентификатора:
+\begin{Grammar}[vspace=2pt]
 Идент-оп:  Идентификатор '*'?
 \end{Grammar} 
 
@@ -95,13 +103,15 @@
 Для явного указании типа используется имя типа, перед которым может стоять ключевое слово \keyword{мб} (\emph{может быть}). 
 
 \begin{Grammar}
-Указ-типа: 'мб'? Квалидент
-Квалидент: Идентификатор ('.' Идентификатор)?
+Указ-типа: 'мб'? Имя-типа 
+Имя-типа: Идентификатор | Импорт-идент
+Импорт-идент: Идентификатор '.' Идентификатор
 \end{Grammar} 
+
+Если в качестве имени типа используется \emph{Импорт-идент}, то первый идентификатор в нем должен обозначать имя импортированного модуля (\See{mods:import}), а второй идентификатор должен быть идентификатором экспортированного из этого модуля объекта, в данном контексте - идентификатор типа.
 
 Множество значений объекта с типом \keyword{мб} T состоит из значения, обозначенного предопределенным идентификатором  \keyword{пусто} и значений типа Т. 
 Тип такого объекта называется \emph{может быть Т} (\See{decls:mb-types}). 
-
 
 \hypertarget{constants}{%
 \subsection{Описание констант}\label{decls:constants}}
