--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -1,19 +1,102 @@
 \hypertarget{expressions}{%
 \section{Выражения}\label{expr:chapter}}
 
+Выражение определяет вычисление значения путем применения операторов и функций к операндам. 
+
+\begin{Grammar}
+Выражение
+    : Унарное-выражение
+	| Выражение Бинарная-операция Выражение
+
+Унарное-выражение
+	: Первичное-выражение
+	| Унарная-операция Унарное-выражение
+\end{Grammar}    
+
+\hypertarget{primary-expr}{%
+\subsection{Первичные выражения}\label{expr:primary-expr}}
+
+Первичные выражения - это выражения, которые являются операндами унарных и бинарных операций.
+
+\begin{Grammar}
+Первичное-выражение
+    : Операнд
+	( Доступ
+	| Индексация
+	| Конверсия
+	| Аргументы-вызова
+	| Конструктор-массива
+	| Конструктор-класса
+	| Отмена-может-быть
+	)*
+\end{Grammar}    
+
+\begin{Trivil}
+1
+к.поле
+а[№]
+Факториал(5)
+А[1, 2, 3]
+К{имя: "Вася", возраст: 23}
+а^
+объект.вектор[номер].метод()
+\end{Trivil}
+
 \hypertarget{operands}{%
 \subsection{Операнды}\label{expr:operands}}
+
+Операнды - это элементарные значения в выражении. Операнд может быть литералом, именем объекта, 
+обозначающим константу, переменную или функцию, или выражением в скобках.
+
+\begin{Grammar}
+Операнд: Литерал | Имя-объекта | '(' Выражение ')'
+Литерал
+    : Целочисленный-литерал
+    | Вещественный-литерал
+    | Строковый-литерал
+    | Символьный-литерал
+Имя-объекта: Идентификатор | Импорт-идент
+Импорт-идент: Идентификатор '.' Идентификатор
+\end{Grammar}    
+
+Если в качестве имени объекта используется \emph{Импорт-идент}, то первый идентификатор в нем должен обозначать имя импортированного модуля (\See{mods:import}), а второй идентификатор должен быть идентификатором экспортированного из этого модуля объекта.
+
+\smallskip
+\begin{tabular}[c]{l|l}
+\textbf{Операнд} & \textbf{Тип выражения} \\ \hline
+Имя объекта & тип объекта \\
+Целочисленный-литерал & Цел64 \\
+Вещественный-литерал & Вещ64 \\ 
+Строковый-литерал & Строка \\ 
+Символьный-литерал & Символ \\
+Выражение в скобках & тип выражения \\
+\end{tabular}
 
 \hypertarget{selector}{%
 \subsection{Доступ к полям и методам}\label{expr:selector}}
 
-\hypertarget{call}{%
-\subsection{Вызов функции или метода}\label{expr:call}}
+Доступ применяется к первичному выражению.
 
+\begin{Grammar}
+Доступ: '.' Идентификатор
+\end{Grammar}    
+
+В выражении \verb|что-то.имя|:
+\begin{itemize}
+\item
+    \verb|что-то| должно быть выражением типа \emph{Т}, где \emph{Т} - это тип класса. 
+\item
+    а \verb|имя| должно быть идентификатором поля или метода типа \emph{Т} или базового класса \emph{Т}
+\end{itemize}
+
+Типом такого выражения является тип поля или метода.
 
 \hypertarget{indexation}{%
 \subsection{Индексация}\label{expr:indexation}}
 
+
+\hypertarget{call}{%
+\subsection{Вызов функции или метода}\label{expr:call}}
 
 \hypertarget{vector-composite}{%
 \subsection{Конструктор вектора}\label{expr:vector-composite}}
