--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -23,7 +23,7 @@
     : Операнд
 	( Доступ
 	| Индексация
-	| Конверсия
+	| Преобразование
 	| Аргументы-вызова
 	| Конструктор-массива
 	| Конструктор-класса
@@ -89,10 +89,55 @@
     а \verb|имя| должно быть идентификатором поля или метода типа \emph{Т} или базового класса \emph{Т}
 \end{itemize}
 
-Типом такого выражения является тип поля или метода.
+Типом выражения доступа является тип поля или метода.
+
+\begin{Trivil}
+чел.возраст := 5
+
+если чел.возраст < 18 { ... }
+\end{Trivil}
 
 \hypertarget{indexation}{%
 \subsection{Индексация}\label{expr:indexation}}
+
+Индексация применяется к первичному выражению.
+
+\begin{Grammar}
+Индексация: '[' Выражение '['
+\end{Grammar}    
+
+Выражении \verb|что-то[индекс]| обозначает элемент вектора или вариативного параметра, индекс которого определяется выражением \verb|индекс|.
+\begin{itemize}
+\item
+    \verb|что-то| должно быть идентификатором, обозначающим вариативный параметр
+\item
+    или \verb|что-то| должно быть выражением типа \emph{Т}, где \emph{Т} - это тип вектора
+\item
+    \verb|индекс| должен быть выражением типа \verb|Цел64| или \verb|Байт|
+\end{itemize}
+
+Если во время исполнения индекс выходит за границы вектора или параметра (индекс < 0 | индекс >= длина), происходит \emph{авария}.
+
+Типом выражения индексации является тип элемента вектора, если индексируется вектор или тип вариативного параметра, если индексируется вариативный параметр.
+
+Так как индексация и конструктор вектора (\See{expr:vector-composite}) не всегда различимы синтаксически, выбор между ними происходит на уровне семантики, 
+если выражение \verb|что-то|  обозначает тип, то это конструктор вектора, иначе индексация.
+
+\hypertarget{conversion}{%
+\subsection{Преобразование типа}\label{expr:conversion}}
+
+Преобразование типа применяется к первичному выражению, и преобразует, если это возможно, значение выражения к \emph{целевому типу}, указанному в операции преобразования.
+Если во время выполнения преобразования оказывается, что выполнить его нельзя, происходит \emph{авария}.
+
+\begin{Grammar}
+Преобразование: '(:' 'осторожно'? Указ-типа ')'
+\end{Grammar}   
+
+Если в преобразование есть ключевое слово \keyword{преобразование}, то это небезопасная операция, которая рассматривается отдельно (\See{unsafe:conversions}).
+
+
+
+
 
 
 \hypertarget{call}{%
@@ -104,13 +149,11 @@
 \hypertarget{class-composite}{%
 \subsection{Конструктор экземпляра класса}\label{expr:class-composite}}
 
-
-\hypertarget{operators}{%
-\subsection{Операции}\label{expr:operators}}
-
 \hypertarget{mb-ops}{%
 \subsection{Операции для объектов может быть типа}\label{expr:mb-ops}}
 
+\hypertarget{operators}{%
+\subsection{Операции}\label{expr:operators}}
 
 \hypertarget{const-expr}{%
 \subsection{Константные выражения}\label{expr:const-expr}}
