--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -127,18 +127,54 @@
 \subsection{Преобразование типа}\label{expr:conversion}}
 
 Преобразование типа применяется к первичному выражению, и преобразует, если это возможно, значение выражения к \emph{целевому типу}, указанному в операции преобразования.
-Если во время выполнения преобразования оказывается, что выполнить его нельзя, происходит \emph{авария}.
 
 \begin{Grammar}
 Преобразование: '(:' 'осторожно'? Указ-типа ')'
 \end{Grammar}   
 
-Если в преобразование есть ключевое слово \keyword{преобразование}, то это небезопасная операция, которая рассматривается отдельно (\See{unsafe:conversions}).
+Если в преобразование есть ключевое слово \keyword{осторожно}, то это небезопасная операция, которая рассматривается отдельно (\See{unsafe:conversions}).
 
+Часть преобразований, например, преобразования между числовыми типами и символами, а так же строковые преобразования могут изменить 
+представление значения первичного выражения и повлечь за собой затраты на выполнение, а так же \emph{аварийное завершение}, если выполнить преобразование невозможно.
 
+Преобразование классов изменяют только тип, но не представление значения.
 
+\bigskip
+Разрешенные преобразования:
 
+\begin{tabular}[c]{p{2cm}|p{4.5cm}|p{4cm}}
+\textbf{Целевой тип} & \textbf{Тип выражения} &  \textbf{Условие выполнения} \\ 
+\hline
+Байт & Цел64, Слово64, Символ, Строковый литерал длины 1 & значение в диапазоне 0..255 \\
+\hline
+\multirow{3}*{Цел64} & Байт, Символ, Строковый литерал длины 1 & всегда \\ 
+ & Слово64 & значение в диапазоне 0..Max(Цел64) \\
+ & Вещ64  & всегда \\
+\hline
+\multirow{2}*{Слово64} & Байт, Символ, Строковый литерал длины 1 & всегда \\
+   & Цел64 & не отрицательное значение \\
+\hline
+Вещ64 & Цел64 & всегда \\
+\hline
+\multirow{2}*{Символ} &  Байт, Строковый литерал длины 1 & всегда \\
+    & Цел64, Слово64 & значение в диапазоне Unicode символа \\
+\hline
+Строка & Символ, \verb+[]+Символ, \verb+[]+Байт & всегда \\
+\hline
+\verb+[]+Байт & Строка, Символ  & всегда \\
+\hline
+\verb+[]+Символ & Строка  & всегда \\
+\hline
+Класс & Класс & От базового класса к расширенному \\
+\hline
+\end{tabular}
 
+\begin{Trivil}
+тип Байты = []Байт
+пусть байты = "Привет"(:Байты)
+
+пусть три = pi(:Цел64)
+\end{Trivil}
 
 \hypertarget{call}{%
 \subsection{Вызов функции или метода}\label{expr:call}}
