--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -373,7 +373,7 @@
 Параметр: Идентификатор ':' '...'? ('*' | Указ-типа)  
 \end{Grammar} 
 
-Последний параметр функции может иметь тип с префиксом \verb|...| - это \emph{вариативный параметр}. Функция с таким параметром может быть вызвана с нулем или более аргументов для этого параметра.
+Последний параметр функции может иметь тип с префиксом \verb|...| - это \emph{вариативный параметр}. Функция с таким параметром может быть вызвана с нулем или более аргументов для этого параметра. Если тип вариативного парметра указан как \emph{Т}, то в теле функции типом  параметра является \verb+[]T+.
 
 Если вместо типа параметра указан символ \verb|'*'|, то параметр называется полиморфным.
 Аргумент, соотвествующий этому параметру, может быть выражением любого типа. 
@@ -422,14 +422,14 @@
 В расширенном классе может быть определен метод с таким же идентификатором как в одном из базовых классов.
 
 \emph{переопределен}, то есть опеределен другой метод . При этом сигнатура переопределеного метода должна совпадать с сигнатуром переопределяемого метода, а именно:
-\begin{itemize}
+\begin{d_itemize}
 \item
     Число параметров должно совпадать
 \item
     Типы  параметров должны быть эквивалентны \See{compat:equal-types}
 \item 
     Признаки вариативности и полиморфности должны совпадать
-\end{itemize}
+\end{d_itemize}
 
 Пример ошибки при переопределении метода (разное число параметров):
 \begin{SampleErr}[vspace=2pt]
