--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -24,8 +24,8 @@
 	( Доступ
 	| Индексация
 	| Преобразование
-	| Аргументы-вызова
-	| Конструктор-массива
+	| Вызов
+	| Конструктор-вектора
 	| Конструктор-класса
 	| Отмена-может-быть
 	)*
@@ -82,12 +82,12 @@
 \end{Grammar}    
 
 В выражении \verb|что-то.имя|:
-\begin{itemize}
+\begin{d_itemize}
 \item
     \verb|что-то| должно быть выражением типа \emph{Т}, где \emph{Т} - это тип класса. 
 \item
     а \verb|имя| должно быть идентификатором поля или метода типа \emph{Т} или базового класса \emph{Т}
-\end{itemize}
+\end{d_itemize}
 
 Типом выражения доступа является тип поля или метода.
 
@@ -107,14 +107,14 @@
 \end{Grammar}    
 
 Выражении \verb|что-то[индекс]| обозначает элемент вектора или вариативного параметра, индекс которого определяется выражением \verb|индекс|.
-\begin{itemize}
+\begin{d_itemize}
 \item
     \verb|что-то| должно быть идентификатором, обозначающим вариативный параметр
 \item
     или \verb|что-то| должно быть выражением типа \emph{Т}, где \emph{Т} - это тип вектора
 \item
     \verb|индекс| должен быть выражением типа \verb|Цел64| или \verb|Байт|
-\end{itemize}
+\end{d_itemize}
 
 Если во время исполнения индекс выходит за границы вектора или параметра (индекс < 0 | индекс >= длина), происходит \emph{авария}.
 
@@ -179,8 +179,99 @@
 \hypertarget{call}{%
 \subsection{Вызов функции или метода}\label{expr:call}}
 
+Вызов применяется к первичному выражению. Это выражение
+\begin{d_itemize}
+\item
+    является идентификатором стандартной функции (\See{stdfuncs:chapter})
+\item
+    или обозначает функцию, тогда это \emph{вызов функции}
+\item
+    или явлется выражением типа класс, тогда это \emph{вызов метода}
+\end{d_itemize}
+
+\begin{Grammar}
+Вызов: '(' Список-аргументов? ')'
+Список-аргументов: Аргумент (',' Аргумент)* ','?
+Аргумент: Выражение '...'?
+\end{Grammar}   
+
+В вызове указывается список аргументов. Число аргументов в списке должно быть равно числу параметров в сигнатуре функции или метода, за исключение случая, 
+когда в сигнатуре есть вариативный параметр. Для вариативного параметра число аргументов может быть от нуля и более.
+
+Каждый аргумент в вызове является \emph{выражением}. 
+Если для вариативного параметра задан единственный аргумент, то после выражения может стоять знак операции \verb+...+, делающий  \emph{развернутое выражение} (\See{expr:call-unfold}).
+
+Для всех других аргументов, выражение должно быть совместимо по присваиванию с типом параметра (\See{compat:assign}).
+
+Типом выражения вызова является тип результата. Если в сигнатуре функции или метода тип результата отсутствует, то вызов не может быть операндом для любой операции.
+
+\begin{Trivil}
+фн Факториал(ц: Цел64): Цел64 { /*тело*/ }
+
+пусть рез = Факториал(5)
+\end{Trivil}
+
+\hypertarget{call-unfold}{%
+\subsubsection{Развернутое выражение}\label{expr:call-unfold}}
+
+\emph{Развернутое выражение} может быть использовано только как аргумент для вариативного параметра и только, если это единственный аргумент для этого параметра. 
+Если развернутое выражение \emph{х}\verb+...+ используется как аргумент для параметра \verb+п: ...Т+, то должно выполняется одно из условий:
+\begin{d_itemize}
+\item
+    \emph{х} является вариативным параметром того же типа \verb+Т+
+\item
+    \emph{х} - это выражение типа вектора, причем тип вектора определен, как \verb+[]Т+
+\end{d_itemize}
+
+Пример использования развернутого вектора в качестве аргумента вариативного параметра:
+\begin{Trivil}[vspace=2pt]
+фн Соединить(список: ...Строка) {/*тело*/}
+
+тип Строки = []Строка
+
+фн Сохранить(строки: Строки) {
+   пусть текст = Соединить(строки...)
+   /* сохранение текста */
+}
+\end{Trivil}
+
 \hypertarget{vector-composite}{%
 \subsection{Конструктор вектора}\label{expr:vector-composite}}
+
+Конструктор вектора применяется к первичному выражению, которое должно обозначать тип вектора. Результатом выполнения конструктора является экземпляр типа вектора.
+
+\begin{Grammar}
+Конструктор-вектора: '[' Список-элементов? ']' 
+Список-элементов: Элемент (',' Элемент)* ','?
+Элемент: (Индекс-элемента ':')? Значение-элемента
+Индекс-элемента: Выражение
+Значение-элемента: Выражение
+\end{Grammar}   
+
+Пример использования конструктора вектора в вызове:
+\begin{Trivil}[vspace=2pt]
+тип Строки = []Строка
+фн Сохранить(строки: Строки) { /*тело*/ }
+
+Сохранить(Строки["привет", "мир"])
+\end{Trivil}
+
+Для всех элементов должно выполняться:
+\begin{d_itemize}
+\item
+    \emph{Индекс-элемента} должен быть выражением типа \verb|Цел64| или \verb|Байт|
+\item
+    \emph{Значение-элемента} должен быть выражением, совместимым по присваиванию с типом элемента вектора (\See{compat:assign}).
+\end{d_itemize}
+
+Если хотя бы для одного элемента конструктора задан \emph{Индекс-элемента}, то он должен быть задан для всех элементов конструктора.
+
+Если \emph{Индекс-элемента} задан, то в результируюшем векторе в позиции \emph{Индекс-элемента} будет стоять значение \emph{Значение-элемента}.
+Если \emph{Индекс-элемента} не задан, то элементы будет размещены в результирующем векторе последовательно, начиная с индекса 0.
+
+Длина результирующего вектора равна максимальному индексу + 1.
+
+\TBD: Если конструктор вектора задает значения не для всех индексов, то тип элемента вектора должен быть типом, для которое есть значение по умолчанию.
 
 \hypertarget{class-composite}{%
 \subsection{Конструктор экземпляра класса}\label{expr:class-composite}}
