--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -271,6 +271,9 @@
 
 Если тип поля не указан, то он устанавливается равным типу выражения (\See{expr:chapter}).
 
+\hypertarget{fields-init}{%
+\subsection{Инициализация полей}\label{decls:fields-init}}
+
 Каждое поле класса должно быть явно проинициализировано.
 Если инициализация задана через лексему '=', то значениe поля не может быть изменено (\emph{поле с единственным присваиванием}), 
 если же в инициализации используется лексема ':=', то значение поля может быть изменено  (\See{stmt:assignment}, \See{stmt:inc-dec}).
