--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -238,14 +238,14 @@
 \hypertarget{vector-composite}{%
 \subsection{Конструктор вектора}\label{expr:vector-composite}}
 
-Конструктор вектора применяется к первичному выражению, которое должно обозначать тип вектора. Результатом выполнения конструктора является экземпляр типа вектора.
+Конструктор вектора применяется к первичному выражению, которое должно обозначать тип вектора. Результатом выполнения конструктора является вектор.
 
 \begin{Grammar}
 Конструктор-вектора: '[' Список-элементов? ']' 
 Список-элементов: Элемент (',' Элемент)* ','?
-Элемент: (Индекс-элемента ':')? Значение-элемента
+Элемент: (Индекс-элемента ':')? Значение
 Индекс-элемента: Выражение
-Значение-элемента: Выражение
+Значение: Выражение
 \end{Grammar}   
 
 Пример использования конструктора вектора в вызове:
@@ -261,26 +261,62 @@
 \item
     \emph{Индекс-элемента} должен быть выражением типа \verb|Цел64| или \verb|Байт|
 \item
-    \emph{Значение-элемента} должен быть выражением, совместимым по присваиванию с типом элемента вектора (\See{compat:assign}).
+    \emph{Значение} должен быть выражением, совместимым по присваиванию с типом элемента вектора (\See{compat:assign}).
 \end{d_itemize}
 
 Если хотя бы для одного элемента конструктора задан \emph{Индекс-элемента}, то он должен быть задан для всех элементов конструктора.
 
-Если \emph{Индекс-элемента} задан, то в результируюшем векторе в позиции \emph{Индекс-элемента} будет стоять значение \emph{Значение-элемента}.
+Если \emph{Индекс-элемента} задан, то в результирующем векторе в позиции \emph{Индекс-элемента} будет стоять значение \emph{Значение}.
 Если \emph{Индекс-элемента} не задан, то элементы будет размещены в результирующем векторе последовательно, начиная с индекса 0.
 
 Длина результирующего вектора равна максимальному индексу + 1.
 
-\TBD: Если конструктор вектора задает значения не для всех индексов, то тип элемента вектора должен быть типом, для которое есть значение по умолчанию.
+\TBD: Если конструктор вектора задает значения не для всех индексов, то тип элемента вектора должен быть типом, для которое есть значение по умолчанию. 
+Или должно быть явное значение по умолчанию \verb+*: 1+
 
 \hypertarget{class-composite}{%
 \subsection{Конструктор экземпляра класса}\label{expr:class-composite}}
 
-\hypertarget{mb-ops}{%
-\subsection{Операции для объектов может быть типа}\label{expr:mb-ops}}
+Конструктор вектора применяется к первичному выражению, которое должно обозначать тип класса. 
+Результатом выполнения конструктора является экземпляр класса.
+
+\begin{Grammar}
+Конструктор-класса: '{' Список-пар? '}' 
+Список-пар: Пара (',' Пара)* ','?
+Пара: (Идентификатор ':')? Значение
+\end{Grammar}   
+
+Для каждой \emph{Пары} идентификатор должен обозначать поле конструируемого класса. 
+В результирующем экземпляре значением этого поля будет значение выражения \emph{Значение}.
+
+Указание нескольких значений для одного идентификатора поля является ошибкой.
+
+Конструктор должен задавать значения для каждого поля класса с \emph{поздней инициализацией} (\See{decls:fields-init}).
+
+Если класс импортирован из другого модуля, в конструкторе не могут использоваться идентификаторы не экспортированных полей. 
+Если при этом у не экспортированного поля задана \emph{поздняя инициализация}, конструктор такого класса может быть использован только в модуле,
+содержащем описание класса.
+
+\begin{Trivil}[vspace=2pt]
+тип Человек = класс {
+    имя: Строка = позже
+    возраст := 0
+}
+
+пусть Вася = Человек{имя: "Вася", возраст: 25}
+\end{Trivil}
+
+Пример ошибки - значение поля "имя" с поздней инициализацией не задано:
+\begin{SampleErr}[vspace=2pt]
+пусть Некто := Человек{возраст: 25}
+\end{SampleErr}
 
 \hypertarget{operators}{%
 \subsection{Операции}\label{expr:operators}}
+
+\hypertarget{mb-ops}{%
+\subsection{Операции для объектов может быть типа}\label{expr:mb-ops}}
+
 
 \hypertarget{const-expr}{%
 \subsection{Константные выражения}\label{expr:const-expr}}
